--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@astrojs/react": "^2.2.1",
     "@astrojs/tailwind": "^4.0.0",
+    "@portabletext/types": "^2.0.6",
+    "@sanity/client": "^6.4.9",
+    "@sanity/types": "^3.16.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "astro": "^2.10.7",
+    "astro-sanity": "^1.1.7",
+    "groq": "^3.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3"
